Fixed long word overflow In Comment and Post component

--- a/src/styles/Comment.scss
+++ b/src/styles/Comment.scss
@@ -4,6 +4,7 @@
     margin: 1rem 0;
     border-radius: 0.2rem;
     border: 1px solid #dee5e7;
+    word-wrap: break-word;
     &.even {
         background: #f7f7f8;
     }
