--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-gap: 0.5rem;
     grid-template-columns: 2.5rem minmax(2rem, 50rem);
+    word-wrap: break-word;
     .post-left {
         justify-self: center;
         .score {
